--- a/courses/templates/projects/eval_submit.html
+++ b/courses/templates/projects/eval_submit.html
@@ -3,9 +3,9 @@
 {% load static %}
 
 {% block breadcrumbs %}
-  <li><a href="{% url 'course' course.slug %}">{{ course.title }}</a></li>
-  <li><a href="{% url 'project' course_slug=course.slug project_slug=project.slug %}">{{ project.title }}</a></li>
-  <li><a href="{% url 'projects_eval' course.slug project.slug %}">Evaluations</a></li>
+<li class="breadcrumb-item active" aria-current="page"><a href="{% url 'course' course.slug %}">{{ course.title }}</a></li>
+<li class="breadcrumb-item active" aria-current="page"><a href="{% url 'project' course_slug=course.slug project_slug=project.slug %}">{{ project.title }}</a></li>
+<li class="breadcrumb-item active" aria-current="page"><a href="{% url 'projects_eval' course.slug project.slug %}">Evaluations</a></li>
 {% endblock %}
 
 
