--- a/courses/templates/courses/course_list.html
+++ b/courses/templates/courses/course_list.html
@@ -1,10 +1,25 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Courses</h2>
-  <ul>
+<div class="container-fluid px-4">
+  <h2 class="my-5 text-center">Courses</h2>
+  <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 g-4">
     {% for course in courses %}
-      <li><a href="{% url 'course' course.slug %}">{{ course.title }}</a></li>
+      <div class="col mb-4">
+        <div class="card h-100 shadow hover-effect">
+          <img src="https://via.placeholder.com/400x250/1E448B/FFF?text={{ course.title|urlencode }}" class="card-img-top" alt="{{ course.title }}" decoding="async">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title fs-4">{{ course.title }}</h5>
+            <div class="d-flex justify-content-between align-items-center mt-3">
+              <a href="{% url 'course' course.slug %}" class="btn btn-primary">View Course</a>
+              <div class="student-enrollment">
+                <i class="fas fa-users me-1"></i> {{ course.students.count }}
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     {% endfor %}
-  </ul>
+  </div>
+</div>
 {% endblock %}
