--- a/courses/templates/courses/leaderboard_score_breakdown.html
+++ b/courses/templates/courses/leaderboard_score_breakdown.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block breadcrumbs %}
-  <li><a href="{% url 'course' enrollment.course.slug %}">{{ enrollment.course.title }}</a></li>
-  <li><a href="{% url 'leaderboard' enrollment.course.slug %}">Leaderboard</a></li>
+  <li class="breadcrumb-item active" aria-current="page"><a href="{% url 'course' enrollment.course.slug %}">{{ enrollment.course.title }}</a></li>
+  <li class="breadcrumb-item active" aria-current="page"><a href="{% url 'leaderboard' enrollment.course.slug %}">Leaderboard</a></li>
 {% endblock %}
 
 {% block content %}
