--- a/courses/templates/courses/course_list.html
+++ b/courses/templates/courses/course_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
 <div class="container-fluid px-4">
   <h2 class="my-5 text-center">Courses</h2>
@@ -7,7 +7,7 @@
     {% for course in courses %}
       <div class="col mb-4">
         <div class="card h-100 shadow hover-effect">
-          <img src="https://via.placeholder.com/400x250/1E448B/FFF?text={{ course.title|urlencode }}" class="card-img-top" alt="{{ course.title }}" decoding="async">
+          <img src="{% static 'imgs/default.jpg'%}" class="card-img-top" alt="{{ course.title }}" decoding="async">
           <div class="card-body d-flex flex-column">
             <h5 class="card-title fs-4">{{ course.title }}</h5>
             <div class="d-flex justify-content-between align-items-center mt-3">
