--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
       </header>
 
       <main class="container my-4">
-        <div class="form-container bg-white border rounded p-4">
+        <div class="form-container bg-light border rounded p-4">
           {% block content %}{% endblock %}
         </div>
       </main>
