--- a/courses/templates/courses/enrollment.html
+++ b/courses/templates/courses/enrollment.html
@@ -5,21 +5,36 @@
 {% endblock %}
 
 {% block content %}
-  <h2>Edit Enrollment Details</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
 
-    <p>
-      Display name appears on the leaderboard, is an auto-generated
-      random name. You can edit it to be a nickname, or your real
-      name.</p>
-    <p>
-      Certificate name should be your actual name that you want to
-      appear on your certificate. If you don't set it, your
-      Display name will be used for the certificate.
-    </p>
+    <h2>Edit Enrollment Details</h2>
+    <div class="mb-4">
+      <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
 
-    <button type="submit">Save Changes</button>
-  </form>
+        <p>
+          Display name appears on the leaderboard, is an auto-generated
+          random name. You can edit it to be a nickname, or your real
+          name.</p>
+        <p>
+          Certificate name should be your actual name that you want to
+          appear on your certificate. If you don't set it, your
+          Display name will be used for the certificate.
+        </p>
+
+        <button type="submit">Save Changes</button>
+      </form>
+    </div>
+
+    <h2>Enrollment information</h2>
+    <div>
+      <p>Certificate: 
+        {% if enrollment.certificate_url %}
+          <a href="{{ enrollment.certificate_url }}" target="_blank">Download</a>
+        {% else %}
+          Not available
+        {% endif %}
+      </p>
+    </div>
+
 {% endblock %}
