--- a/courses/templates/courses/course.html
+++ b/courses/templates/courses/course.html
@@ -99,7 +99,7 @@
         {% endif %}
       </div>
       <div class="col-3 text-md-right">
-        <span class="badge {{ project.status_badge_class }}">{{ project.get_project_state_name }}</span>
+        <span class="badge {{ project.badge_css_class }}">{{ project.badge_state_name }}</span>
       </div>
     </div>
   </div>
