--- a/courses/templates/courses/leaderboard_score_breakdown.html
+++ b/courses/templates/courses/leaderboard_score_breakdown.html
@@ -57,12 +57,27 @@
       {% if submission.project.state == 'CO' %}
       <li>
         <strong>Project:</strong> {{ submission.project.title }}<br>
-        <strong>Project score:</strong> {{ submission.project_score }}<br>
+        <strong>Project score:</strong> {{ submission.project_score }}
+        {% if submission.passed %}
+          (passed)
+        {% else %}
+          (failed)
+        {% endif %}
+        <br>
         <strong>Peer review score:</strong> {{ submission.peer_review_score }}<br>
         <strong>Learning in public (project):</strong> {{ submission.project_learning_in_public_score }}<br>
         <strong>Learning in public (peer review):</strong> {{ submission.peer_review_learning_in_public_score }}<br>
         <strong>FAQ contribution score:</strong> {{ submission.project_faq_score }}<br>
-        <strong>Total score:</strong> {{ submission.total_score }}
+        <strong>Total score:</strong> {{ submission.total_score }}<br>
+        {% if submission.github_link %}
+        <strong>Project URL:</strong> <a href="{{ submission.github_link }}" target="_blank">{{ submission.github_link}}</a><br>
+        {% endif %}
+        {% if submission.learning_in_public_links %}
+        <strong>Learning in public links:</strong><br>
+          {% for link in submission.learning_in_public_links %}
+            <a href="{{ link }}" target="_blank">{{ link }}</a><br>
+          {% endfor %}
+        {% endif %}
       </li>
       {% else %}
       <li>
